media-tools/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr-service
  name: prowlarr-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 9696
    protocol: TCP
    targetPort: 9696
    name: web
  selector:
    app: prowlarr
