media-tools/prowlarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "prowlarr.ucdialplans.com"
  rules:
  - backendRefs:
    - name: prowlarr-service
      namespace: media-tools
      kind: Service
      port: 9696
