media-tools/prowlarr/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: prowlarr
  namespace: media-tools
spec:
  entryPoints: 
  - websecure
  routes:
  - match: Host(`prowlarr.ucdialplans.com`) 
    kind: Rule
    services:
    - name: prowlarr-service
      port: 9696
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
