media-tools/prowlarr/networkpolicy_DISABLED.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: prowlarr
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app: radarr
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app: readarr
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app: sonarr
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app: lidarr
      toPorts:
        - ports:
            - port: "9696"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app: lidarr
      toPorts:
        - ports:
            - port: "8686"
    - toEndpoints:
        - matchLabels:
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
    - toEndpoints:
        - matchLabels:
            app: readarr
      toPorts:
        - ports:
            - port: "8787"
    - toEndpoints:
        - matchLabels:
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
    - toEndpoints:
        - matchLabels:
            app: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
